--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-FLASK_ENV=development
-FLASK_APP=run.py
-SECRET_KEY=your_secret_key_here
-DATABASE_URL=mysql://root:yourpassword@localhost/bd_ecommerce_shoes
+
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=12345678
+DB_DATABASE=bd_ecommerce_shoes
